<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp">
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/deskripsiImg"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Jenis Draft"
                        android:textColor="@color/white"/>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <ImageView
                            android:id="@+id/imgInfo"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="3dp"
                            android:src="@drawable/ic_info"/>
                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtJenisDraft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_draft"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:id="@+id/txtNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    />
                <TextView
                    android:id="@+id/txtAlasan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>